# Nerevar

./: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
src/: env.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  lib_backup.rs  main.rs  parsers.rs  types.rs  utils.rs
src-tauri/src/server_settings/: types.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/edit-server-config/: page.tsx
src/app/edit-server-settings/: page.tsx
src/components/custom/: background-embers.tsx  hero-dust-storm.tsx
src/components/ui/: card.tsx
src/features/app-config/context/: config-context.tsx  openmw-config-context.tsx
src/features/check-for-updates/nerevar/components/: check-for-app-update.tsx
src/features/dashboard/components/: dashboard.tsx
src/features/launchers/: manual-connect-card.tsx  openmw-launcher-card.tsx  openmw-wizard-card.tsx  tes3mp-browser-card.tsx  tes3mp-card.tsx  tes3mp-server-card.tsx
src/features/mode-toggle/components/: mode-switcher.tsx
src/features/server-configuration/: server-config-form.tsx  server-settings-form.tsx
src/features/server-list/components/: server-list.tsx
src/features/setup/components/: initial-setup.tsx
src/hooks/: use-openmw-launcher.ts  use-openmw-wizard.ts  use-tes3mp-browser.ts  use-tes3mp-server.ts  use-tes3mp.ts
src/lib/: utils.ts
src/types/: nerevar-config.ts  openmw-cfg.ts  openmw-settings-cfg.ts  server-cfg.ts  server-settings.ts
(+1 files in other folders)
