[package]
name = "Nerevar"
version = "0.2.0"
description = "Morrowind Multiplayer Manager"
authors = ["Kyle Austad"]
license = "MIT"
repository = "https://github.com/kyaustad/Nerevar"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nerevar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["json"] }
zip = "0.6"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
open = "1.0"
regex = "1.11.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
